# Todo

./: .gitignore  CMakeLists.txt  Todo  Upped.h  a.out  file.h  install.sh  main  main.c  makefile  test.c  todo.c  todo.h  todo2.c  users.txt
.cache/clangd/index/: Upper.c.243FE438BB347421.idx  Upper.h.9B1E7809BD6171EF.idx  main.c.15F7120D64364CFB.idx  todo.h.E904DA679EE578BB.idx
include/: Upper.h  todo.h
output/: todo
src/: Upper.c  todo.c
